fix layout; add align-items property to nav-links for improved alignment

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body
 {
     list-style:none;
     display:flex;
+    align-items: center;
 }
 .nav-links li
 {
